<?xml version="1.0" encoding="utf-8"?>
<!--Created by Yan Yu (n00769714)-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_wallet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#ffdab9"
    tools:context="humber.thunderbolts.WalletActivity">


    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/you_have"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_weight="0"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="9dp"
        android:ems="100"
        android:id="@+id/editText3"
        android:layout_weight="0"/>

    <TextView
        android:textAllCaps="true"
        android:layout_marginTop="9dp"
        android:text="@string/in_your_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textStyle="bold"

        android:layout_weight="0"/>

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/deposit_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_weight="0"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="100dp"/>


    <!--Android Pay Button holder-->
    <FrameLayout
        android:id="@+id/wallet_button_holder"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:text="@string/pay_pal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:textColor="#ffffff"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"
        android:background="@drawable/paypel_button_pressed"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm"
        android:onClick="requestFullWallet" />

</LinearLayout>
